# Bubblesort

./: LICENSE
Bubble sort/: LICENSE  README.md  pyproject.toml
Bubble sort/src/: bubblesort.py
